fix focus form, accessibility contrast on contact page

--- a/css/style.css
+++ b/css/style.css
@@ -492,10 +492,7 @@ nav .caret {
     border-radius: 0 0 29px 29px;
 }
 
-.form-control {
-    border-color: rgba(0, 0, 0, .1);
-    box-shadow: none;
-}
+
 
 .scrollToTop {
     width: 40px;
@@ -1118,6 +1115,29 @@ h4 {
     background-image: none;
     border-radius: 4px;
     display : none;
+}
+
+.contact-form-control {
+    border-color: rgba(0, 0, 0, .1);
+    box-shadow: none;
+}
+.contact-form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+textarea.contact-form-control {
+    height: auto;
 }
 
 @media (max-width: 767px) {
